# refined-simple

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  refined-simple.cabal
.github/workflows/: cabal_ci.yaml  ghc_8-10-7.yaml  ghc_9-0-1.yaml  ghc_9-2-1.yaml  haddock_ci.yaml  stack_ci.yaml  style_ci.yaml
ci_scripts/: cabal-fmt.sh
docs/: Refined-Internal.html  Refined-Predicate-Class.html  Refined-Predicate-Foldable.html  Refined-Predicate-Math.html  Refined-Predicate-Operators.html  Refined-Predicate-Text.html  Refined-Predicate.html  Refined.html  doc-index.html  index.html  refined-simple.haddock
docs/src/: Refined.Internal.html  Refined.Predicate.Class.html  Refined.Predicate.Foldable.html  Refined.Predicate.Math.html  Refined.Predicate.Operators.html  Refined.Predicate.Text.html  Refined.Predicate.html  Refined.html
nix/: ci.nix  ghc_8-10-7.nix  ghc_9-0-1.nix  ghc_base.nix
scripts/: cabal-fmt_inplace.sh  gen_haddock.sh
src/: Refined.hs
src/Refined/: Internal.hs  Predicate.hs
src/Refined/Predicate/: Class.hs  Foldable.hs  Math.hs  Nat.hs  Operators.hs  Text.hs
test/doctest/: Main.hs
